# mosh

./: configure.ac
scripts/: Makefile.am  mosh.py
src/frontend/: Makefile.am  mosh.cc
